# cookiecutter-data-experimentation

./: README.md  cookiecutter.json  pyproject.toml
hooks/: pre_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
{{cookiecutter.project_name}}/.streamlit/: config.toml
{{cookiecutter.project_name}}/data/: example_data.csv
{{cookiecutter.project_name}}/tests/: test_app.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: app.py  settings.py
