[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author}} <f{{cookiecutter.email}}>"]
readme = "README.md"
packages = [
  {include = "{{cookiecutter.project_slug}}"}
]


[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
streamlit = "^1.31.1"
plotly = "^5.18.0"
duckdb = "^0.10.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.8.0"
black = "^23.3.0"
pre-commit = "^3.0.0"
commitizen = "^2.40.0"
pytest = "^7.2.2"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
